--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost/eventos?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rlcjr.157!
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
